--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
 PORT=8000
 NODE_ENV=development
 
-MONGO_URI=mongodb://localhost:27017/my
+MONGO_URI="mongodb://localhost:27017/projectManager"
 
 SESSION_SECRET="your_session_secret"
 SESSION_EXPIRES_IN="1d"
